# vlm-parser

./: .gitignore  README.md  design-qa.md  pyproject.toml
demo/: __init__.py  server.py
docs/superpowers/plans/: 2026-06-14-pdf-vlm-parser-implementation.md  2026-06-15-async-demo-jobs.md
docs/superpowers/specs/: 2026-06-13-pdf-vlm-parser-design.md
src/vlm_parser/: __init__.py  parser.py
src/vlm_parser/core/: __init__.py  models.py  options.py  parser.py  pipeline.py
src/vlm_parser/documents/: __init__.py  base.py
src/vlm_parser/documents/pdf/: __init__.py  adapter.py  renderer.py  static_extractor.py
src/vlm_parser/image/: __init__.py  chunker.py  preprocess.py
src/vlm_parser/vlm/: __init__.py  client.py  concurrency.py  rewriter.py
tests/: test_core_parser_concurrency.py  test_demo_server.py  test_image_processing.py  test_output_models.py  test_pdf_static_parse.py  test_public_api.py  test_vlm_rewriter.py
