[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-parser"
version = "0.1.0"
description = "PDF-first parser with optional OpenAI-compatible VLM rewriting"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "Pillow>=10",
  "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
